# ment

./: .gitignore  README.md  pyproject.toml
examples/: fit_cov_2d.py  fit_cov_4d.py  fit_cov_nd.py  rec_2d.py  rec_2d_1d.ipynb  rec_2d_norm.py  rec_2d_samp.py  rec_4d_2d.ipynb  rec_4d_2d_rand.ipynb  rec_4d_2d_rand.py  rec_long.py  rec_nd_1d_marg.py  rec_nd_1d_marg_sample.ipynb  rec_nd_1d_rand.py  rec_nd_1d_rand_sample.ipynb  rec_nd_2d_marg.py  rec_nd_2d_marg_forward.py  rec_nd_2d_marg_integrate.ipynb  rec_nd_2d_marg_reverse.py  rec_nd_2d_marg_sample.ipynb  rec_simple.py  run.sh  simple.ipynb  simple.py  style.mplstyle  test_diag.py  test_interp.ipynb  test_interp.py  test_kde.ipynb  test_large_dataset.py  test_mcmc.py  test_prior_trunc.ipynb  test_samp.ipynb  test_samp_2d.ipynb  test_samp_2d.py  test_samp_dynesty.ipynb  test_samp_gmm.ipynb  test_samp_gmm.py  utils.py
experiments/: grid_sample.ipynb  grid_sample.py  interp_3d_fast.ipynb  interp_fast.ipynb  interp_jax.py  mcmillan_2d.ipynb  multipole_2d.ipynb  rec_2d.ipynb  rec_2d_1d.ipynb  rec_2d_1d_mcmillan.ipynb  rec_2d_1d_toy.ipynb  rec_4d_1d_mcmillan.ipynb  rec_4d_1d_mcmillan_ring.ipynb  rec_4d_2d.ipynb  rec_4d_2d_toy.ipynb  rec_6d_2d_toy.ipynb  rec_linac_dist.ipynb  rec_nd_1d_marg_sample.ipynb  rec_nd_1d_rand_sample.ipynb  rec_nd_1d_sample_mcmc.ipynb  rec_nd_2d_integrate.ipynb  rec_nd_2d_marg_integrate.ipynb  rec_nd_2d_marg_sample.ipynb  rec_nd_2d_sample.ipynb  rec_nd_2d_sample_mcmc.ipynb  ring_2d_nonlinear.ipynb  test_hmc_01.ipynb  test_kde.ipynb  test_samp.ipynb  test_zeus_01.ipynb  test_zeus_02.ipynb  utils.py
(+90 files in other folders)
