[project]
name = "ment"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "matplotlib>=3.9,<3.10",
    "ultraplot>=1.0.5",
    "psdist>=2.1.4",
]

[build-system]
requires = [
    "setuptools>=62",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ment"]

[tool.black]
line-length = 88
