[project]
name = "ment"
version = "2.1.0"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "torch",
    "tqdm",
    "zuko",
]

[project.optional-dependencies]
test = [
    "scikit-image",
    "xarray",
]

[build-system]
requires = [
    "setuptools>=62",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ment"]

[tool.black]
line-length = 88
